--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "stripe": "^11.8.0",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "vercel": "^28.15.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
