--- a/package.json
+++ b/package.json
@@ -7,10 +7,16 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "stripe": "stripe listen --forward-to localhost:3000/api/webhooks"
+    "stripe": "stripe listen --forward-to localhost:3000/api/webhooks",
+    "slicemachine": "start-slicemachine"
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "@prismicio/client": "^6.7.3",
+    "@prismicio/helpers": "^2.3.9",
+    "@prismicio/next": "^1.0.2",
+    "@prismicio/react": "^2.5.1",
+    "@prismicio/slice-simulator-react": "^0.2.3",
     "@stripe/stripe-js": "^1.46.0",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
@@ -29,8 +35,10 @@
     "vercel": "^28.15.0"
   },
   "devDependencies": {
+    "@prismicio/types": "^0.2.7",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
+    "slice-machine-ui": "^0.6.1",
     "tailwindcss": "^3.2.4"
   }
 }
