--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint src --ext .ts,.tsx",
+    "lint:fix": "eslint src --ext .ts,.tsx --fix",
     "stripe": "stripe listen --forward-to localhost:3000/api/webhooks",
     "slicemachine": "start-slicemachine"
   },
@@ -37,6 +38,7 @@
   "devDependencies": {
     "@prismicio/types": "^0.2.7",
     "autoprefixer": "^10.4.13",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
     "postcss": "^8.4.21",
     "slice-machine-ui": "^0.6.1",
     "tailwindcss": "^3.2.4"
