--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint src --ext .ts,.tsx",
     "lint:fix": "eslint src --ext .ts,.tsx --fix",
     "stripe": "stripe listen --forward-to localhost:3000/api/webhooks",
-    "slicemachine": "start-slicemachine"
+    "slicemachine": "start-slicemachine",
+    "test": "jest --watchAll --detectOpenHandles",
+    "coverage": "jest --coverage"
   },
   "dependencies": {
     "@next/font": "13.1.6",
@@ -37,10 +39,18 @@
   },
   "devDependencies": {
     "@prismicio/types": "^0.2.7",
+    "@testing-library/dom": "^9.0.1",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
     "autoprefixer": "^10.4.13",
+    "babel-jest": "^29.5.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "postcss": "^8.4.21",
     "slice-machine-ui": "^0.6.1",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "ts-jest": "^29.0.5"
   }
 }
